Fixed layout issues by expanding zones

--- a/styles/index.css
+++ b/styles/index.css
@@ -42,11 +42,11 @@ body, html {
 }
 
 .fifty {
-  height: 70%;
+  height: 500px;
 }
 
 .eighty {
-  height: 90%;
+  height: 600px;
 }
 
 nav {
